--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 <center>
     <h2>About</h2>
     <p>These are the some of the svg's logos.These can be usefull for some designers..</p></center>
-</center>  </body>
+</center>
+  </center></body>
 </html>
